tests/rosetta/transpiler/Clojure/fizzbuzz-2.error
run error: exit status 1
Execution error (ClassCastException) at main/-main (fizzbuzz-2.clj:19).
class java.lang.Boolean cannot be cast to class java.lang.Number (java.lang.Boolean and java.lang.Number are in module java.base of loader 'bootstrap')

Full report at:
/tmp/clojure-3132353864168257736.edn
